grid spacing fix

--- a/landingpage.css
+++ b/landingpage.css
@@ -132,7 +132,7 @@ button a {
 .tile9-wrap {
     margin: 0 auto;
     text-align: center;
-    padding: 50px;
+    padding: 20px;
 }
 
 .tile9 {
